--- a/src/app/pages/course/course.component.html
+++ b/src/app/pages/course/course.component.html
@@ -414,7 +414,7 @@
             <div class="col-3">
               <div class="field">
                 <label htmlFor="montant">Montant</label>
-                <p-inputNumber mode="decimal" [minFractionDigits]="2" name="montant" id="montant" [(ngModel)]="montant" [showButtons]="true" [min]="0" [readonly]="true" ></p-inputNumber>
+                <p-inputNumber mode="decimal" [minFractionDigits]="2" name="montant" id="montant" [(ngModel)]="montant" [showButtons]="true" [min]="0" [disabled]="true" ></p-inputNumber>
               </div>
             </div>
 
@@ -532,7 +532,7 @@
                     <div class="col-2">
                       <div class="field">
                         <label htmlFor="totalPrice{{detailPurchasesForms.length-1}}">Prix total</label>
-                        <p-inputNumber mode="decimal" [minFractionDigits]="2" name="totalPrice{{detailPurchasesForms.length-1}}"  id="totalPrice{{detailPurchasesForms.length-1}}" [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].totalPrice" [showButtons]="true" [min]="0"  ></p-inputNumber>
+                        <p-inputNumber mode="decimal" [minFractionDigits]="2" name="totalPrice{{detailPurchasesForms.length-1}}"  id="totalPrice{{detailPurchasesForms.length-1}}" [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].totalPrice" [disabled]="true"  ></p-inputNumber>
                       </div>
                     </div>
                   </div>
