leave longitude et latitude

--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -392,7 +392,7 @@
             </div>
 
             <!-- Ligne 5 -->
-            <div class="field col-6">
+            <!-- <div class="field col-6">
               <label htmlFor="longitude">Longitude</label>
               <p-inputNumber
                 name="longitude"
@@ -425,7 +425,7 @@
               <div *ngIf="latitudeInput.invalid && latitudeInput.touched" class="error-message">
                 La latitude est requise.
               </div>
-            </div>
+            </div> -->
           </div>
 
           <div style="margin-top: 20px;" class="form-group">
