product to create course

--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -14,8 +14,8 @@
         </mat-form-field>
       </div>
       <div class="col-lg-4 d-flex align-items-center justify-content-end">
-        <button mat-flat-button (click)="openDialogAdd()" color="primary">
-          Ajouter un Produit
+        <button mat-flat-button (click)="openCourse()" color="primary">
+          Ajouter une course
         </button>
       </div>
     </div>
