--- a/src/app/pages/fournisseur/fournisseur.component.html
+++ b/src/app/pages/fournisseur/fournisseur.component.html
@@ -88,7 +88,7 @@
 
 <!-- add -->
 <ng-template #dialogTemplate>
-  <mat-dialog-content style="max-width: 1200px; max-height: 550px;">
+  <mat-dialog-content style="max-width: 1200px; max-height: 450px;">
     <div class="p-16 bg-light-primary rounded" style="margin-bottom: 20px;">
       <h5 class="mat-subtitle-2 text-primary d-flex align-items-center f-w-600">
         <i-tabler name="info-circle" class="icon-20 m-r-8 d-flex"></i-tabler>
@@ -160,7 +160,7 @@
               placeholder="Entrez le nom de la rue"
               required
               name="streetName"
-              [(ngModel)]="shopData.nameStreet"
+              [(ngModel)]="address.nameStreet"
             />
           </mat-form-field>
         </div>
@@ -173,7 +173,7 @@
               placeholder="Entrez le numéro de la rue"
               required
               name="streetNumber"
-              [(ngModel)]="shopData.streetNumber"
+              [(ngModel)]="address.streetNumber"
             />
           </mat-form-field>
         </div>
@@ -193,7 +193,7 @@
 <!-- edit -->
 
 <ng-template #dialogTemplateEdit>
-  <mat-dialog-content style="max-width: 1200px; max-height: 400px;">
+  <mat-dialog-content style="max-width: 1200px; max-height: 450px;">
     <div class="p-16 bg-light-primary rounded" style="margin-bottom: 20px;">
       <h5 class="mat-subtitle-2 text-primary d-flex align-items-center f-w-600">
         <i-tabler name="info-circle" class="icon-20 m-r-8 d-flex"></i-tabler>
@@ -215,7 +215,7 @@
             />
           </mat-form-field>
         </div>
-        <div class="col-lg-6">
+        <!-- <div class="col-lg-6">
           <label for="acronym">Acronyme</label>
           <mat-form-field appearance="outline" class="w-100">
             <input
@@ -227,7 +227,7 @@
               [(ngModel)]="shopData.acronym"
             />
           </mat-form-field>
-        </div>
+        </div> -->
         <div class="col-lg-6">
           <label for="addressEdit">Adresse</label>
           <mat-form-field appearance="outline" class="w-100">
@@ -278,7 +278,7 @@
               placeholder="Entrez le nom de la rue"
               required
               name="streetName"
-              [(ngModel)]="shopData.nameStreet"
+              [(ngModel)]="address.nameStreet"
             />
           </mat-form-field>
         </div>
@@ -291,7 +291,7 @@
               placeholder="Entrez le numéro de la rue"
               required
               name="streetNumber"
-              [(ngModel)]="shopData.streetNumber"
+              [(ngModel)]="address.streetNumber"
             />
           </mat-form-field>
         </div>
