--- a/src/app/pages/fournisseur/fournisseur.component.html
+++ b/src/app/pages/fournisseur/fournisseur.component.html
@@ -160,7 +160,7 @@
               placeholder="Entrez le nom de la rue"
               required
               name="streetName"
-              [(ngModel)]="address.nameStreet"
+              [(ngModel)]="address.streetName"
             />
           </mat-form-field>
         </div>
@@ -255,7 +255,7 @@
               </mat-option>
             </mat-select>
           </mat-form-field>
-        </div>
+        </div>        
         <div class="col-lg-6">
           <label for="cityEdit">Ville</label>
           <mat-form-field appearance="outline" class="w-100">
@@ -278,7 +278,7 @@
               placeholder="Entrez le nom de la rue"
               required
               name="streetName"
-              [(ngModel)]="address.nameStreet"
+              [(ngModel)]="address.streetName"
             />
           </mat-form-field>
         </div>
